# rgbd

./: .gitignore  pyproject.toml
rgbd/: __init__.py  config.py  make_fragments.py  opencv_pose_estimation.py  optimize_posegraph.py  refine_registration.py  register_fragments.py  rgbd_reconstruction.py  utils.py
rgbd/configs/: config_default.py
tests/: test_rgbd_reconstruction.py
tests/test_data/20240506_175527_IQ_right/: intrinsic_01_right.json
tests/test_data/20240506_175654_IQ_left/: intrinsic_00_left.json
